u call for partic

--- a/html/lesson_plans/call_for_participants_POC_folklore.html
+++ b/html/lesson_plans/call_for_participants_POC_folklore.html
@@ -88,7 +88,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Call for Participants.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/about/call_for_assessments_2022.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_assessments_2022.html</a>.</p>
+					<p>“Call for Participants.” <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="html/lesson_plans/call_for_participants_POC_folklore.html" class="cite-link">html/lesson_plans/call_for_participants_POC_folklore.html</a>.</p>
 				</section>
 			</main>
 			
