--- a/html/lesson_plans/call_for_participants_POC_folklore.html
+++ b/html/lesson_plans/call_for_participants_POC_folklore.html
@@ -36,12 +36,13 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="assessments">
-				<h2 id="assessments">Call for Participants (2023)</h2>
+			<main id="main" aria-labelledby="lesson-plans">
+				<h2 id="lesson-plans">Call for Participants (2023)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/assessments/uvc_0040-1800px.jpg" srcset="/img/assessments/uvc_0040-1800px.jpg 1800w, /img/assessments/uvc_0040-1650px.jpg 1650w, /img/assessments/uvc_0040-1500px.jpg 1500w, /img/assessments/uvc_0040-1350px.jpg 1350w, /img/assessments/uvc_0040-1200px.jpg 1200w, /img/assessments/uvc_0040-1050px.jpg 1050w, /img/assessments/uvc_0040-900px.jpg 900w, /img/assessments/uvc_0040-750px.jpg 750w, /img/assessments/uvc_0040-600px.jpg 600w, /img/assessments/uvc_0040-450px.jpg 450w, /img/assessments/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/>
+					<img src="/img/about/uvc_0045-1800px.jpg" srcset="/img/about/uvc_0045-1800px.jpg 1800w, /img/about/uvc_0045-1650px.jpg 1650w, /img/about/uvc_0045-1500px.jpg 1500w, /img/about/uvc_0045-1350px.jpg 1350w, /img/about/uvc_0045-1200px.jpg 1200w, /img/about/uvc_0045-1050px.jpg 1050w, /img/about/uvc_0045-900px.jpg 900w, /img/about/uvc_0045-750px.jpg 750w, /img/about/uvc_0045-600px.jpg 600w, /img/about/uvc_0045-450px.jpg 450w, /img/about/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
+
 
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
@@ -73,7 +74,7 @@
 
 					<p>During this period, the first voices of colonized subjects often reached Western readers through folklore collections that white colonial administrators, folklorists, and amateurs compiled with the help of local coauthors/creators. The organizers are particularly interested in highlighting women of colors' achievements in this field and their work theorizing, transcribing, compiling, and adapting folktales. For this call, we invite participants who can create biographies, contextual materials, and suggested teaching activities about the following women: Jane Johnston Schoolcraft, Zitkala-Sa, Anna Liberata de Sousa, Emma Nakuina, Jovita Gonzalez, E. Pauline Johnson, and Charlotte Forten Grimk&eacute;. We also invite suggestions of other female folklorists, folklore collections, or archives that would be of interest for this cluster. </p>
 
-					<p>The deadline for submissions is September 15, 2023. Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri at <a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>.</p>. Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of previous <a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans.html">lesson plan clusters</a> and and individual lesson plans.</p>
+					<p>The deadline for submissions is September 15, 2023. Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri at <a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>. Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of previous <a aria-label="External Link" href="https://undiscipliningvc.org/html/lesson_plans.html">lesson plan clusters</a> and and individual lesson plans.</p>
 
 					<p>Questions about this Call for Participants and the Undisciplining the Victorian Classroom initiative should be directed to Ryan Fong (<a class="mail" href="mailto:Ryan.Fong@kzoo.edu"><span>Ryan.Fong@kzoo.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>) and Indu Ohri (<a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>).</p>
 
@@ -83,7 +84,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/148331/moqui-style-sarape">Moqui-Style Sarape</a>. [c.1870]. Art Institute of Chicago, Chicago, 1997.458. Through prior acquisitions of Louis A. Allen, Mr. and Mrs. James W. Alsdorf, The Alsdorf Foundation, Joseph P. Antonow, Edward E. Ayer in memory of Charles L. Hutchinson, Herbert Baker, Mr. and Mrs. Dave Chapman, Sylvia Coppersmith in memory of Leila Rosen, Mrs. Eugene A. Davidson, Domenic DiPiero, Maurice D. Galleher Endowment, Mr. and Mrs. Edwin E. Hokin, Mrs. Maurice H. Mandelbaum as a gift of her family, Mr. and Mrs. Everett McNear; Mr. and Mrs. Michael Newbury, Dr. H. Van de Waal, Mr. and Mrs. Raymond Wielgus and Suzette Morton Zurcher. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters</a> page alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/22380/blanket">Blanket</a>. [1880-1899]. Art Institute of Chicago, Chicago, 1964.1135. Gift of Mrs. William Bross Lloyd. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a> and <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Cluster (Open)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
