--- a/html/lesson_plans/call_for_participants_POC_folklore.html
+++ b/html/lesson_plans/call_for_participants_POC_folklore.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plans">
 				<h2 id="lesson-plans">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0045-1800px.jpg" srcset="/img/about/uvc_0045-1800px.jpg 1800w, /img/about/uvc_0045-1650px.jpg 1650w, /img/about/uvc_0045-1500px.jpg 1500w, /img/about/uvc_0045-1350px.jpg 1350w, /img/about/uvc_0045-1200px.jpg 1200w, /img/about/uvc_0045-1050px.jpg 1050w, /img/about/uvc_0045-900px.jpg 900w, /img/about/uvc_0045-750px.jpg 750w, /img/about/uvc_0045-600px.jpg 600w, /img/about/uvc_0045-450px.jpg 450w, /img/about/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of cotton and wool, single interlocking tapestry weave; twined selvages and heading, overcast finish terminating in tassels."/>
+					<img src="/img/assessments/uvc_0075-1170px.jpg" srcset="/img/assessments/uvc_0075-1170px.jpg 1170w, /img/assessments/uvc_0075-888px.jpg 888w, /img/assessments/uvc_0075-585x.jpg 585w, /img/assessments/uvc_0075-568px.jpg 568w, /img/assessments/uvc_0075-444px.jpg 444w, /img/assessments/uvc_0075-284px.jpg 284w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A chintz tapestry made of cotton with a light background, vertical red stripes, and red flowers in between the stripes."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
