u call for partc

--- a/html/lesson_plans/call_for_participants_POC_folklore.html
+++ b/html/lesson_plans/call_for_participants_POC_folklore.html
@@ -59,7 +59,7 @@
 
 					<p><em>Undisciplining the Victorian Classroom</em> announces a call for participants to create lesson plans for a cluster that models how to teach students about women of color's contributions to folklore studies as folklorists, translators, and creators/co-creators of folklore criticism, collections, or archives. Anyone with relevant teaching or research interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
-					<p class="center"><em> Submission Deadline:</em> <strong>September 15, 2023</strong></p>
+					<p class="center">Submission Deadline:<strong> September 15, 2023</strong></p>
 
 					<p>Please submit a short CV and expression of interest with your research and teaching specialties, experience with folklore studies, and interest in individual female folklorists to Indu Ohri at <a class="mail" href="mailto:iohri@bu.edu"><span>iohri@bu.edu	</span><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a>.</p>
 			
@@ -84,7 +84,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Anonymous Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/22380/blanket">Blanket</a>. [1880-1899]. Art Institute of Chicago, Chicago, 1964.1135. Gift of Mrs. William Bross Lloyd. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a> and <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Cluster (Open)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p>Unknown. <em>Chintz (India), 18th Century</em>. Cotton, 17--, <a href="https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg">https://images.collection.cooperhewitt.org/327258_62c029660f2a3a0c_x.jpg</a>. Cooper Hewitt, Smithsonian Design Museum, Gift of Josephine Howell. Public domain.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
